--- a/page3.html
+++ b/page3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <a href="page1.html" title="Go to Google Search">
+        <a href="index.html" title="Go to Google Search">
             <img srcset="images\image1.jpg" alt="Google" height="40" width="100" />
         </a>
         <ul>
