--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="page1.html">| Google Search</a></li>
+        <li><a href="index.html">| Google Search</a></li>
         <li><a href="page3.html">| Advanced</a></li>
 
     </ul>
