--- a/page3.html
+++ b/page3.html
@@ -12,7 +12,7 @@
             <img srcset="images\image1.jpg" alt="Google" height="40" width="100" />
         </a>
         <ul>
-            <li><a href="page1.html" title="Go to Google Search">| Google Search</a> </li>
+            <li><a href="index.html" title="Go to Google Search">| Google Search</a> </li>
             <li><a href="page2.html" title="Go to Google Images">| Images</a> </li>
         </ul>
     </div>
