--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
     
     <img id="f_logo" srcset="images\image1.jpg" alt="Google Logo"/>
     <div >
-        <form action="https://www.google.com/search">
-            <input class="input1" type="text" placeholder="Search" />
-            <input id="move1" class="form_edit" type="submit" value="Google Search"/>
-        </form>
-    </div>
-    <div>
-        <form>
-            <input id="move2"class="form_edit" type="button" value="“I’m Feeling Lucky”" name="" formaction="https://google.com/doodles/" />
+        <form action="https://google.com/search">
+            <input class="input1" type="text" name="q" placeholder="Search" />
+            <input id="move1" class="form_edit" type="submit" value="Google Search" />
+            <input id="move2" class="form_edit" type="submit" value="“I’m Feeling Lucky”" name="q" formaction="https://www.google.com/doodles/"/>
         </form>
     </div>
 </body>
