--- a/page2.html
+++ b/page2.html
@@ -16,9 +16,9 @@
 
     <img id="f_logo" srcset="images\image2.jpg" alt="Google Logo" />
     <div id="f_form">
-        <form action="https://www.google.com.eg/imghp?hl=en&tab=ri&ogbl" method="get">
+        <form action="https://images.google.com/images?q=" method="get">
             <input class="input1" type="text" name="q" placeholder="Search" />
-            <input id="move3" class="form_edit" type="submit" value="Search Image" />
+            <input id="move3" class="form_edit" formmethod="get" type="submit" value="Search Image" />
         </form>
     </div>
 </body>
