edited for the last time

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <form action="https://google.com/search">
             <input class="input1" type="text" name="q" placeholder="Search" />
             <input id="move1" class="form_edit" type="submit" value="Google Search" />
-            <input id="move2" class="form_edit" type="submit" value="“I’m Feeling Lucky”" name="q" formaction="https://www.google.com/doodles/"/>
+            <input id="move2" class="form_edit" type="submit" value="“I’m Feeling Lucky”" name="btnI"/>
         </form>
     </div>
 </body>
