--- a/page3.html
+++ b/page3.html
@@ -30,11 +30,11 @@
                 </tr>
                 <tr>
                     <td> <label class="form_edit1" for="any of these words">Any of these words:</label></td>
-                    <td><input  class="form_edit2" id="any of these words" name="q" type="text"   placeholder="Type OR between all the words you want: miniature OR standard" /></td>
+                    <td><input  class="form_edit2" id="any of these words" name="as_epq" type="text"   placeholder="Type OR between all the words you want: miniature OR standard" /></td>
                 </tr>
                 <tr>
                     <td><label  class="form_edit1" for="none of these words">None of these words:</label></td>
-                    <td><input class="form_edit2" id="none of these words" name="q"  type="text" placeholder="Put a minus sign just before words that you don't want: -rodent, -" Jack Russell"" /></td>
+                    <td><input class="form_edit2" id="none of these words" name="as_eq"  type="text" placeholder="Put a minus sign just before words that you don't want: -rodent, -" Jack Russell"" /></td>
                 </tr>
                 <tr>
                     <td> <input class="btn" type="submit" value="Advanced Search" title="Search"  /></td>
